Fixed incorrect cursor on collapsed item-set's header (#239)

--- a/src/main/resources/assets/admin/common/styles/api/form/form-set-view.less
+++ b/src/main/resources/assets/admin/common/styles/api/form/form-set-view.less
@@ -226,10 +226,10 @@
 
         .drag-control {
           height: 20px;
-          width: 15px;
+          width: 10px;
           background-position-x: center;
           padding-right: 0;
-          margin-right: 5px;
+          margin-right: 8px;
         }
       }
 
